--- a/frame2.html
+++ b/frame2.html
@@ -14,9 +14,10 @@
 <!--------------BODY--------------->
 <body>
 
-    <div class="logo">pomodoro</div>
-
-    <div class="github-link"><i class="fa fa-github"></i> Github</div>
+    <nav class="nav-bar">
+        <div class="logo">pomodoro</div>
+        <div class="github-link"><i class="fa fa-github"></i> Github</div>
+    </nav>
 
     <main class="pt-sq2-texts">
 
@@ -26,7 +27,7 @@
         <p>
             Using the pomodoro technique involves focusing on a particular task for 25 minutes,
             then taking a 5 mins break. To learn more about the pomodoro
-             technique, read <a style="color: rgb(172, 6, 6);" href="devlulu.xyz">here</a> 
+             technique, read <a href="devlulu.xyz">here</a> 
         </p>
        
     </main>
@@ -38,7 +39,7 @@
 
     <div class="small-text">
         <p>
-            For research purposes, I  would like to get your reviews. You can drop them <a style="color: rgb(172, 6, 6);" href="devlulu.xyz">here</a>
+            For research purposes, I  would like to get your reviews. You can drop them <a href="devlulu.xyz">here</a>
         </p>
     </div>
 </body>
